@@ -1,3 +1,8 @@
+2010-02-24  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* gnus-art.el (gnus-treat-display-x-face): Don't burp if
+	shell-command-to-string signals an error (bug#5299).
+
 2010-02-24  Glenn Morris  <rgm@gnu.org>
 
 	* message.el (message-smtpmail-send-it)
